Add comprehensive documentation and project infrastructure
- Create professional README with installation guide, usage examples, and API documentation
- Add requirements.txt for Python dependency management
- Update .gitignore to properly track build directory structure while ignoring binaries
- Add .gitkeep files to preserve build/binaries and build/logs directories
- Document troubleshooting steps and security considerations

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-build/
+build/*
+!build/binaries/
+!build/logs/
+build/binaries/*
+!build/binaries/.gitkeep
+build/logs/*
+!build/logs/.gitkeep
 *.o
 *.db
 *.log
